<resources>
    <string name="app_name">DanMack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    <string name="explore_str">Explore</string>-->
    <string name="recommendation_str">Recommendation</string>
    <string name="favourite_str">Favourite</string>
<!--    <string name="playlist_str">Playlist</string>-->
    <string name="share_link_str">Share Link</string>
    <string name="copy_link_str">Copy Link</string>
    <string name="detail_str">Song Details</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

<!--    <string name="login_str">Login</string>-->
    <string name="cancel">Cancel</string>

    <string name="choose_photo_title">Choose Profile Photo</string>

    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="sign_up_str">Sign up</string>
    <string name="search_str">Search</string>
    <string name="playlist_str">Playlist</string>
    <string name="explore_str">Explore</string>
    <string name="profile_str">Profile</string>
    <string name="cancel_str">Cancel</string>
    <string name="add_playlist_str">Add Playlist</string>
    <string name="play_str">Play</string>
    <string name="actor_image_str">Actor Image</string>
    <string name="favourite_button_str">Favourite button</string>
    <string name="play_list_button_str">Play list button</string>
    <string name="user_icon_str">User Icon</string>
    <string name="link_image_str">Link Image</string>
    <string name="share_icon_str">Share Icon</string>
    <string name="artist_cover_image_str">Artist cover image</string>

    <string name="copy_link_image_str">Copy link Image</string>

    <string name="top_trending_str">Top Trending</string>
    <string name="song_details_str">Song Details</string>
    <string name="library_str">Library</string>
    <string name="this_is_great_str">This is great</string>
    <string name="login_str">Login</string>
    <string name="email_str">email</string>
    <string name="password_str">password</string>
    <string name="do_not_have_account_yet_sign_up_str">Do not have account yet? Sign up</string>
    <string name="no_playlist_added_str">No playlist added</string>
    <string name="change_photo_str">change photo</string>
    <string name="danny_gmail_com_str">danny@gmail.com</string>



    <string name="already_have_an_account_login_str">Already have an account? login</string>
    <string name="lagbaja_str">Lagbaja</string>
</resources>