<?xml version="1.0" encoding="utf-8"?>
<!--  Constraint layout for efficient rendering on views on screen -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/artist_img"
        android:layout_width="@dimen/margin_100"
        android:layout_height="@dimen/margin_100"
        android:src="@drawable/lagbaja_img"
        android:layout_marginTop="@dimen/margin_18"
        android:layout_marginStart="@dimen/margin_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/actor_image_str" />

    <TextView
        android:id="@+id/bottom_sheet_layout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="DaBaby"
        android:textAppearance="@style/CustomiseBody2"
        android:layout_marginStart="@dimen/margin_18"
        app:layout_constraintStart_toEndOf="@+id/artist_img"
        app:layout_constraintTop_toTopOf="@+id/artist_img"
        android:layout_marginTop="@dimen/margin_16"
        />

    <TextView
        android:id="@+id/bottom_sheet_layout_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ball If I want To"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_layout_title"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout_title"
        android:layout_marginTop="@dimen/margin_8"
        />

    <View
        android:id="@+id/first_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/secondary_color"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_img" />


    <ImageView
        android:id="@+id/bottom_sheet_layout_favourite_btn"
        android:layout_width="@dimen/margin_30"
        android:layout_height="@dimen/margin_30"
        android:src="@drawable/heart"
        app:layout_constraintTop_toBottomOf="@+id/first_view"
        app:layout_constraintStart_toStartOf="@+id/artist_img"
        android:layout_marginStart="@dimen/margin_18"
        android:layout_marginTop="@dimen/margin_16"
        android:contentDescription="@string/favourite_button_str" />

    <TextView
        android:id="@+id/bottom_sheet_layout_favourite_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favourite_str"
        android:layout_marginTop="@dimen/margin_8"
        android:textAppearance="@style/CustomiseBody2"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_layout_favourite_btn"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout_favourite_btn"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_layout_favourite_btn"
        />


    <ImageView
        android:id="@+id/bottom_sheet_layout_playlist_btn"
        android:layout_width="@dimen/margin_35"
        android:layout_height="@dimen/margin_30"
        android:layout_marginStart="@dimen/margin_68"
        android:layout_marginTop="@dimen/margin_16"
        android:src="@drawable/playlist"
        app:layout_constraintStart_toEndOf="@+id/bottom_sheet_layout_favourite_btn"
        app:layout_constraintTop_toBottomOf="@+id/first_view"
        android:contentDescription="@string/play_list_button_str" />

    <TextView
        android:id="@+id/bottom_sheet_layout_playlist_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_str"
        android:layout_marginTop="@dimen/margin_8"
        android:textAppearance="@style/CustomiseBody2"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_layout_playlist_btn"
        app:layout_constraintEnd_toEndOf="@+id/bottom_sheet_layout_playlist_btn"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout_playlist_btn"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_layout_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/margin_10"
        android:text="@string/play_str"
        android:layout_marginTop="@dimen/margin_16"
        android:textAppearance="@style/CustomiseBody2"
        android:drawableStart="@drawable/ic_play_icon"
        android:backgroundTint="@color/black_500"
        app:layout_constraintStart_toStartOf="@+id/bottom_sheet_layout_favourite_tv"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout_favourite_tv" />



    <View
        android:id="@+id/second_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0.5"
        android:background="@color/secondary_color"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout_play_btn"
         />


    <ImageView
        android:id="@+id/user_img"
        android:layout_width="@dimen/margin_20"
        android:layout_height="@dimen/margin_20"
        android:src="@drawable/user"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_view"
        android:contentDescription="@string/user_icon_str" />


    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/CustomiseBody2"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="@+id/user_img"
        app:layout_constraintStart_toEndOf="@+id/user_img"
        app:layout_constraintTop_toTopOf="@+id/user_img"
        tools:text="Authors' name" />


    <View
        android:id="@+id/third_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0.5"
        android:background="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_name" />



    <ImageView
        android:id="@+id/link_img"
        android:layout_width="@dimen/margin_20"
        android:layout_height="@dimen/margin_20"
        android:src="@drawable/link"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_view"
        android:contentDescription="@string/link_image_str" />


    <TextView
        android:id="@+id/bottom_sheet_layout_copy_link_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_link_str"
        android:layout_marginStart="@dimen/margin_16"
        android:textAppearance="@style/CustomiseBody2"
        app:layout_constraintBottom_toBottomOf="@+id/link_img"
        app:layout_constraintStart_toEndOf="@+id/link_img"
        app:layout_constraintTop_toTopOf="@+id/link_img" />

    <View
        android:id="@+id/fourth_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0.5"
        android:background="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout_copy_link_tv" />



    <ImageView
        android:id="@+id/share_img"
        android:layout_width="@dimen/margin_20"
        android:layout_height="@dimen/margin_20"
        android:src="@drawable/share"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_view"
        android:contentDescription="@string/share_icon_str" />


    <TextView
        android:id="@+id/bottom_sheet_layout_share_link_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_link_str"
        android:layout_marginStart="@dimen/margin_20"
        android:textAppearance="@style/CustomiseBody2"
        app:layout_constraintBottom_toBottomOf="@+id/share_img"
        app:layout_constraintStart_toEndOf="@+id/share_img"
        app:layout_constraintTop_toTopOf="@+id/share_img" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_layout_cancel_button"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/margin_8"
        android:text="@string/cancel_str"
        android:textSize="@dimen/textSize_16"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20"
        android:textAppearance="@style/CustomiseBody2"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_layout_share_link_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>